# kaggle_llm_book

./: .gitignore  CLAUDE.md  README.md  bootstrap.sh  data_description.md  main.py  pyproject.toml  restart.sh  set_up.sh
ch3/: ch3.2.ipynb  ch3.3.ipynb  ch3.4.5.ipynb  ch3.4.ipynb  ch3.4_practice.ipynb  ch3_2.ipynb  ch3_3.ipynb  ch3_45.ipynb  ch3_4_5_practice.ipynb  ch3_4_practice.ipynb  ch3_4_practice_answer.ipynb  ch3_5.ipynb  ch3_6.ipynb
