[project]
name = "kaggle-llm-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.6.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "matplotlib-venn>=1.1.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers==4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "nbstripout>=0.9.1",
]
